--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -255,3 +255,8 @@ layer(base);
 @utility menu-dropdown-badge-inactive {
     @apply bg-brand-50 group-hover:bg-brand-100 dark:bg-brand-500/15 dark:group-hover:bg-brand-500/20;
 }
+
+.grid {
+    display: flex;
+    flex-wrap: wrap;
+}
